--- a/n8n/apps/web/package.json
+++ b/n8n/apps/web/package.json
@@ -12,9 +12,21 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/js-cookie": "^3.0.6",
+    "@xyflow/react": "^12.8.4",
+    "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.544.0",
     "next": "^15.5.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-flow-renderer": "^10.3.17",
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
