--- a/n8n/apps/web/package.json
+++ b/n8n/apps/web/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^19.1.0",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
