--- a/n8n/package.json
+++ b/n8n/package.json
@@ -2,11 +2,13 @@
   "name": "n8n",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
+  "build": "turbo run build",
+  "predev": "pnpm --filter @repo/db exec prisma generate",
+  "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "postinstall": "pnpm --filter @repo/db exec prisma generate"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
